--- a/src/styles/components/projects/blocks/direction-btn.pcss
+++ b/src/styles/components/projects/blocks/direction-btn.pcss
@@ -43,12 +43,8 @@
     background-color: transparent;
     border: 1px solid $bg-links-color;
     margin-right: 30px;
-    margin-bottom: 90px;
     fill: black;
-
-    @include mobile {
-        margin-bottom: 0;
-    }
+    outline: none;
 
 
     &:before {
