--- a/src/styles/components/reviews/blocks/slider-reviews.pcss
+++ b/src/styles/components/reviews/blocks/slider-reviews.pcss
@@ -1,6 +1,7 @@
 .slider-reviews {
-    display: flex;
+    /* display: flex; */
     justify-content: space-between;
+    overflow: hidden;
 
     @include phones {
         overflow: hidden;
@@ -13,6 +14,8 @@
     position: relative;
     display: flex;
     flex-direction: column;
+        margin-right: 45px;
+    flex-shrink: 0;
 
     @include tablets {
         padding-left: 5%;
@@ -87,4 +90,49 @@
 .slider-reviews__author-subtitle {
     color: $text-color-opacity3;
     font-weight: 600;
+}
+
+
+.flickity-viewport {
+    height: 250px;
+}
+
+
+.carousel-cell {
+    width: 47%;
+    padding-left: 11%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+        margin-right: 45px;
+    flex-shrink: 0;
+
+    @include tablets {
+        padding-left: 5%;
+    }
+
+    &:before {
+        content: '';
+        position: absolute;
+        background: svg-load('quote.svg', width=100%, height=100%);
+        opacity: 0.05;
+        width: 75px;
+        height: 79px;
+        background-repeat: no-repeat;
+        left: 0px;
+
+        @include tablets {
+            width: 30px;
+            height: 26px;
+        }
+
+        @include phones {
+            display: none;
+        }
+    }
+
+    @include phones {
+        width: 100%;
+        flex-shrink: 0;
+    }
 }
