--- a/src/templates/common/form.pug
+++ b/src/templates/common/form.pug
@@ -2,21 +2,21 @@ section.form
     .form__wrapper
         .container
             h3.form__title.title.title--medium Связаться со мной
-            form.form
+            form.form#form
                 .form__box
                     .form__list
                         label.form__item
                             .form__item-title Введите ваше имя
-                            input.form__input(type="text",placeholder="Ковальчук Дмитрий")
+                            input(name="name").form__input(type="text",placeholder="Ковальчук Дмитрий")
                             +icon('user', 'form__input-icon')
                         label.form__item
                             .form__item-title Введите ваш email
-                            input.form__input(type="email", placeholder="loftshcoll@study.com")
+                            input(name="email").form__input(type="email", placeholder="loftshcoll@study.com")
                             +icon('envelope', 'form__input-icon')
                     .form__row
                         label.form__item.form__block--textarea
                             .form__item-title Сообщение к письму
-                            textarea.form__input.form__input--textarea(placeholder="Требуется ваша помощь в создании сайта. Интересуют сроки и цена вопросай")
+                            textarea(name="comment").form__input.form__input--textarea(placeholder="Требуется ваша помощь в создании сайта. Интересуют сроки и цена вопросай")
                             +icon('message', 'form__input-icon')
                     .form__btn
                         input.btn.btn--form(type="submit", value="Отправить")
