--- a/src/styles/components/parallax/blocks/parallax-budda.pcss
+++ b/src/styles/components/parallax/blocks/parallax-budda.pcss
@@ -27,6 +27,7 @@
     left: 0;
     right: 0;
     bottom: 0;
+    will-change: transform;
 
     &:nth-child(1) {
         display: block;
@@ -53,14 +54,14 @@
     &:nth-child(3) {
         .parallax__img {
             left: 0;
-            bottom: 0;
+            bottom: -23%;
         }
 
     }
 
     &:nth-child(4) {
         .parallax__img {
-            top: 588px;
+            top: 748px;
             left: 50%;
             margin-left: 327px;
 
@@ -71,7 +72,7 @@
     &:nth-child(5) {
         .parallax__img {
             left: 0;
-            bottom: 0;
+            bottom: -23%;
         }
 
     }
@@ -79,14 +80,14 @@
     &:nth-child(6) {
         .parallax__img {
             right: 0;
-            bottom: 0;
+            bottom: -23%;
         }
 
     }
 
     &:nth-child(7) {
         .parallax__img {
-            bottom: 0;
+            bottom: -23%;
         }
 
     }
