--- a/src/styles/components/parallax/blocks/parallax.pcss
+++ b/src/styles/components/parallax/blocks/parallax.pcss
@@ -40,6 +40,7 @@
     left: 0;
     right: 0;
     bottom: 0;
+    will-change: transform;
 
     &:nth-child(1) {
         display: block;
@@ -80,7 +81,7 @@
         display: block;
         .parallax__img {
             left: 0;
-            top: 665px;
+            top: 713px;
         }
     }
 
@@ -88,7 +89,7 @@
         display: block;
         .parallax__img {
             right: 0;
-            top: 28%;
+            top: 31%;
         }
     }
 
@@ -96,7 +97,7 @@
         display: block;
         .parallax__img {
             left: 0;
-            bottom: 0;
+            bottom: -26%;
         }
     }
 }
