--- a/src/styles/components/footer/blocks/footer.pcss
+++ b/src/styles/components/footer/blocks/footer.pcss
@@ -23,6 +23,7 @@
 .footer__copyright {
     display: flex;
     width: 34%;
+    padding-right: 1%;
 
     @include desktop {
         flex-direction: column;
