--- a/src/styles/components/home/blocks/popup.pcss
+++ b/src/styles/components/home/blocks/popup.pcss
@@ -9,7 +9,8 @@
 .popup__wrapper {
     position: absolute;
     height: 100vh;
-    width: 40%;
+    min-width: 40%;
+    padding-right: 5%;
     top: 0;
     right: -100%;
     background-color: white;
