--- a/src/styles/components/home/blocks/socials.pcss
+++ b/src/styles/components/home/blocks/socials.pcss
@@ -7,6 +7,10 @@
     margin-right: 43px;
     transition: .2s;
 
+    @include laptop {
+        margin-right: 25px;
+    }
+
     @include tablets {
         margin-right: 50px;
     }
