--- a/src/styles/components/projects/blocks/tags.pcss
+++ b/src/styles/components/projects/blocks/tags.pcss
@@ -14,8 +14,10 @@
     background-color: $bg-color;
     border-radius: 50px;
     margin-right: 15px;
+    margin-bottom: 10px;
 
     &:last-child {
         margin-right: 0;
+        margin-bottom: 0;
     }
 }
