--- a/src/styles/components/home/blocks/menu.pcss
+++ b/src/styles/components/home/blocks/menu.pcss
@@ -11,6 +11,7 @@
 .menu__list {
     display: flex;
     color: $text-color;
+    white-space: nowrap;
 
     @include tablets {
         flex-wrap: wrap;
@@ -21,13 +22,15 @@
 .menu__item {
     margin-right: 61px;
 
+    @include laptop {
+        margin-right: 30px;
+    }
+
     @include tablets {
         margin-bottom: 20px;
         margin-right: 79px;
 
-        &:nth-child(4) {
-            margin-right: 0;
-        }
+    
     }
 
     @include mobile {
