--- a/src/styles/components/parallax/blocks/parallax.pcss
+++ b/src/styles/components/parallax/blocks/parallax.pcss
@@ -4,6 +4,7 @@
     background-size: cover;
     clip-path: polygon(0% 0%, 0% 93%, 50% 100%, 100% 93%, 100% 0%);
     margin-bottom: 146px;
+
     @include desktop {
         margin-bottom: 128px;
     }
@@ -24,6 +25,9 @@
     }
 }
 
+.bg-tablets__img {
+    position: absolute;
+}
 
 .parallax {
     position: absolute;
@@ -31,6 +35,10 @@
     left: 0;
     right: 0;
     bottom: 0;
+
+    @include tablets {
+        display: none;
+    }
 }
 
 
@@ -54,47 +62,76 @@
 
     &:nth-child(2) {
         display: block;
+
         .parallax__img {
             right: 0;
             top: 298px;
+
+            @include desktop {
+                top: 538px;
+            }
         }
     }
 
     &:nth-child(3) {
         display: block;
+
         .parallax__img {
             left: 50%;
             top: 483px;
             margin-left: 284px;
+
+            @include desktop {
+                top: 627px;
+                margin-left: 367px;
+            }
         }
     }
 
     &:nth-child(4) {
         display: block;
+
         .parallax__img {
             left: 0;
             top: 35%;
+
+            @include desktop {
+                left: -27%;
+            }
         }
     }
 
     &:nth-child(5) {
         display: block;
+
         .parallax__img {
             left: 0;
             top: 713px;
+
+            @include desktop {
+                top: 985px;
+                left: -15%;
+            }
         }
     }
 
     &:nth-child(6) {
         display: block;
+
         .parallax__img {
             right: 0;
             top: 31%;
+
+            @include desktop {
+                right: -41%;
+                top: 45%;
+            }
         }
     }
 
     &:nth-child(7) {
         display: block;
+
         .parallax__img {
             left: 0;
             bottom: -26%;
@@ -112,100 +149,3 @@
     position: relative;
     background: #fff;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* 
-.parallax__layer {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-    &:nth-child(1) {
-        .parallax__img {
-            object-fit: cover;
-            width: 100%;
-            height: 100%;
-        }
-    }
-
-    &:nth-child(2) {
-        .parallax__img {
-            right: 0;
-            top: 298px;
-        }
-    }
-
-    &:nth-child(3) {
-        .parallax__img {
-            top: 536px;
-            left: 50%;
-            margin-left: 15%;
-
-            @include desktop {
-                top: 36.5rem;
-                left: 50%;
-                margin-left: 26%;
-            }
-        }
-    }
-
-    &:nth-child(4) {
-        .parallax__img {
-            top: 580px;
-            right: 0;
-        }
-    }
-
-    &:nth-child(5) {
-        .parallax__img {
-            left: 0;
-            top: 562px;
-
-            @include desktop {
-                left: -19%;
-                top: 40.125rem;
-            }
-        }
-    }
-
-    &:nth-child(6) {
-        .parallax__img {
-            right: 0;
-            bottom: 0;
-
-            @include desktop {
-                right: -53%;
-                bottom: -9%;
-            }
-        }
-    }
-
-    &:nth-child(7) {
-        .parallax__img {
-            bottom: -48%;
-            left: 0;
-        }
-    }
-}
-
-.parallax__img {
-    position: absolute;
-    width: auto;
-    height: auto;
-} */
