--- a/src/styles/mixins.pcss
+++ b/src/styles/mixins.pcss
@@ -10,6 +10,12 @@
   }
 }
 
+@mixin laptop() {
+  @media screen and (max-width: $bp-desktop1030) {
+    @content;
+  }
+}
+
 @mixin tablets() {
   @media screen and (max-width: $bp-tablets) {
     @content;
