--- a/src/styles/components/projects/blocks/direction-btn.pcss
+++ b/src/styles/components/projects/blocks/direction-btn.pcss
@@ -14,7 +14,7 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%) rotate(0deg);
+        transform: translate(-50%, -50%) rotate(-90deg);
         transition: opacity .3s, margin-top .3s;
         opacity: .3;
 
@@ -25,7 +25,7 @@
 
     &--prev {
         &:before {
-            transform: translate(-50%, -50%) rotate(-180deg);
+            transform: translate(-50%, -50%) rotate(-270deg);
         }
     }
 
@@ -50,12 +50,13 @@
     &:before {
         background: svg-load('arrow-down.svg', fill=black, width=100%, height=100%) center center no-repeat;
         opacity: 1;
-
+        transform: translate(-50%, -50%) rotate(0deg);
     }
+
+    &--prev
 
     &:hover {
         border-color: $hover-color-purple;
     }
 }
-
 
