--- a/src/templates/common/form.pug
+++ b/src/templates/common/form.pug
@@ -2,26 +2,28 @@ section.form
     .form__wrapper
         .container
             h3.form__title.title.title--medium Связаться со мной
-            form(@submit="checkForm" novalidate="true").form#form
+            form(@submit="validateForm"
+                 v-on:submit="submission"
+                 ).form#form
                 .form__box
                     .form__list
                         label.form__item
                             .form__item-title Введите ваше имя
-                            input(name="name" v-model="name").form__input(type="text",placeholder="Ковальчук Дмитрий")
-                            .error(v-if="errors" ) {{errors[0]}}
+                            input(v-model="message.name" name="name" type="text",placeholder="Ковальчук Дмитрий").form__input
+                            .error(v-if='errors.length') {{errors[0]}}
                             +icon('user', 'form__input-icon')
                         label.form__item
                             .form__item-title Введите ваш email
-                            input(name="email" v-model="email").form__input(type="email", placeholder="loftshcoll@study.com")
-                            .error(v-if="errors" ) {{errors[1]}}
+                            input(v-model="message.email" name="email" type="email", placeholder="loftshcoll@study.com").form__input
+                            .error(v-if='errors.length') {{errors[1]}}  
                             +icon('envelope', 'form__input-icon')
                     .form__row
                         label.form__item.form__block--textarea
                             .form__item-title Сообщение к письму
-                            textarea(name="comment").form__input.form__input--textarea(placeholder="Требуется ваша помощь в создании сайта. Интересуют сроки и цена вопросай")
+                            textarea(v-model="message.comment" name="comment" placeholder="Требуется ваша помощь в создании сайта. Интересуют сроки и цена вопросай").form__input.form__input--textarea
                             +icon('message', 'form__input-icon')
                     .form__btn
-                        input(v-on:click="greet", type="submit", value="Отправить").btn.btn--form
+                        input(type="submit", value="Отправить").btn.btn--form#send-button
                     
     
 
