--- a/src/styles/components/home/blocks/popup.pcss
+++ b/src/styles/components/home/blocks/popup.pcss
@@ -18,6 +18,7 @@
     flex-direction: column;
     justify-content: center;
     transition: right .5s;
+    overflow: auto;
 
     @include phones {
         width: 100%;
