--- a/src/templates/common/form.pug
+++ b/src/templates/common/form.pug
@@ -3,27 +3,50 @@ section.form
         .container
             h3.form__title.title.title--medium Связаться со мной
             form(
+                @submit.prevent="send"
                  ).form#form
                 .form__box
                     .form__list
                         label.form__item
                             .form__item-title Введите ваше имя
-                            input(v-model="message.name" name="name" type="text",placeholder="Ковальчук Дмитрий").form__input
-                            //- .error(v-if='errors.length') {{errors[0]}}
-                            .error {{validation.firstError('message.name')}}
+                            input(
+                                v-model="message.name" 
+                                name="name" type="text" 
+                                placeholder="Ковальчук Дмитрий"
+                            ).form__input
+                            div(
+                              :class="{error : validation.hasError('message.name')}"   
+                            ) {{ validation.firstError('message.name') }}
                             +icon('user', 'form__input-icon')
                         label.form__item
                             .form__item-title Введите ваш email
-                            input(v-model="message.email" name="email" type="email", placeholder="loftshcoll@study.com").form__input
-                            //- .error(v-if='errors.length') {{errors[1]}}  
+                            input(v-model="message.email" 
+                                name="email" type="email" 
+                                placeholder="loftshcoll@study.com"
+                            ).form__input
+                            div(
+                              :class="{error : validation.hasError('message.email')}"   
+                            ) {{ validation.firstError('message.email') }}
                             +icon('envelope', 'form__input-icon')
                     .form__row
                         label.form__item.form__block--textarea
                             .form__item-title Сообщение к письму
-                            textarea(v-model="message.comment" name="comment" placeholder="Требуется ваша помощь в создании сайта. Интересуют сроки и цена вопросай").form__input.form__input--textarea
+                            textarea(
+                                v-model="message.comment" 
+                                name="comment" 
+                                placeholder="Требуется ваша помощь в создании сайта. Интересуют сроки и цена вопросай"
+                            ).form__input.form__input--textarea
                             +icon('message', 'form__input-icon')
+                            div(
+                            :class="{error : validation.hasError('message.comment')}"  
+                        ) {{ validation.firstError('message.comment') }}
                     .form__btn
-                        input(type="submit", value="Отправить").btn.btn--form#send-button
+                        input(type="submit", value="Отправить").btn.btn--form
+            .tooltip-open
+                .tooltip
+                    .tooltip__content
+                        .tooltip__text Письмо отправлено
+                        .tooltip__button.btn.btn--form закрыть
                     
     
 
